# relation-auth-ic

./: .gitignore  README.md
relation-auth/: Cargo.toml  README.md  build.sh  dfx.json
relation-auth-js-sdk/: README.md  package.json  pnpm-lock.yaml  turbo.json
relation-auth-js-sdk/apps/relation-auth-demo/: README.md  index.html  package.json  vite.config.ts
relation-auth-js-sdk/apps/relation-auth-demo/src/: App.css  App.tsx  main.tsx
relation-auth-js-sdk/apps/relation-auth-demo/src/components/ui/: ui.css
relation-auth-js-sdk/apps/relation-auth-demo/src/components/ui/LoginButton/: index.css  index.tsx
relation-auth-js-sdk/apps/relation-auth-demo/src/components/widget/Button/: index.css  index.tsx
relation-auth-js-sdk/apps/relation-auth-demo/src/components/widget/List/: ListHeader.css  ListHeader.tsx  ListItem.css  ListItem.tsx  index.css  index.tsx
relation-auth-js-sdk/apps/relation-auth-demo/src/components/widget/SvgIcon/: Loading.tsx  index.tsx  loading.css
relation-auth/data/: es256-jwk-private.json  es256-jwk-public.json  es256-public.pem
relation-auth/src/: config.rs  error.rs  lib.did  lib.rs  result.rs  util.rs
relation-auth/src/api/: auth_api.rs  http_api.rs  mod.rs
relation-auth/src/core/: auth.rs  ed25519.rs  jwt.rs  mod.rs  sr25519.rs
relation-auth/src/http/: error.rs  mod.rs  model.rs
relation-auth/src/http/handler/: auth.rs
relation-auth/src/model/: auth.rs  mod.rs
